Bug 73917 - Spelling & Grammar doesn't ignore words in the same sentence
Summary: Spelling & Grammar doesn't ignore words in the same sentence
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
4.2.0.2 rc
Hardware: Other All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-22 09:03 UTC by László Németh
Modified: 2014-01-22 09:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2014-01-22 09:03:18 UTC
Test sentence:

A badd word and a new badd word.

Press F7. Choose Ignore All or Add to Dictionary. The next "badd" will be reported instead of the completion of the spell checking.
Comment 1 Commit Notification 2014-01-22 09:41:21 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c49543cf31c14d4f94f01620244dd7e3ba0919ea

fdo#73917 spelling dialog: don't report fully ignored words again



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 László Németh 2014-01-22 09:48:35 UTC
Note: this problem was reported by Gábor Kelemen.