fdo#73917 spelling dialog: don't report fully ignored words again

Change-Id: I2a8503fd2c3babab844e9cd026a57c438e015254